--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
         current_password: 現在のパスワード
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
-        email: Eメール
+        email: メールアドレス
         profile_id: ユーザーID
         encrypted_password: パスワード確認
         failed_attempts: 失敗したログイン試行回数
@@ -136,9 +136,11 @@ ja:
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
+      confirmation: が一致しません。
       confirmation_period_expired: の期限が切れました。%{period} までに確認する必要があります。 新しくリクエストしてください。
       expired: の有効期限が切れました。新しくリクエストしてください。
       not_found: は見つかりませんでした。
+      taken: はすでに使用されています。
       not_locked: はロックされていません。
       not_saved:
         one: エラーが発生したため %{resource} は保存されませんでした。
